Separated function definitions to a ctarget.c

--- a/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
+++ b/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
@@ -1,2 +1,2 @@
 HelloWorldProject_Label=Hello World
-HelloWorldProject_Description=<p><b>Hello World</b></p> <p>This is a parameterized hello world for LF. You can set a parameter to modify the content in the generated file and a parameter to set the package the file is created in.</p>
+HelloWorldProject_Description=<p><b>Hello World</b></p> <p>Print "Hello World!" in a target language of choice.</p>
