--- a/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
+++ b/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
@@ -1,2 +1,4 @@
 HelloWorldProject_Label=Hello World
-HelloWorldProject_Description=<p><b>Hello World</b></p> <p>Print "Hello World!" in a target language of choice.</p>
+HelloWorldProject_Description=<p><b>Hello World</b></p> <p>Print "Hello world!" in a target language of choice.</p>
+InteractiveProject_Label=Interactive
+InteractiveProject_Description=<p><b>Interactive</b></p> <p>Simulate sensor input through key strokes.</p>
