Added ReflexGame entry to wizard

--- a/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
+++ b/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
@@ -6,3 +6,5 @@ WebserverProject_Label=WebServer
 WebserverProject_Description=<p><b>Web Server</b></p> <p>A simple web server implemented using TypeScript.</p>
 WebServerProject_Label=WebServer
 WebServerProject_Description=<p><b>Web Server</b></p> <p>A simple web server implemented using TypeScript.</p>
+ReflexGameProject_Label=ReflexGame
+ReflexGameProject_Description=<p><b>ReflexGame</b></p> <p>A simple reflex game.</p>
