Added federated hello demo

--- a/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
+++ b/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
@@ -8,3 +8,5 @@ WebServerProject_Label=WebServer
 WebServerProject_Description=<p><b>Web Server</b></p> <p>A simple web server implemented using TypeScript.</p>
 ReflexGameProject_Label=ReflexGame
 ReflexGameProject_Description=<p><b>ReflexGame</b></p> <p>A simple reflex game.</p>
+FederatedProject_Label=Federated
+FederatedProject_Description=<p><b>Federated</b></p>     <p>A federated "Hello World" program.</p>
