--- a/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
+++ b/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
@@ -10,3 +10,5 @@ ReflexGameProject_Label=ReflexGame
 ReflexGameProject_Description=<p><b>ReflexGame</b></p> <p>A simple reflex game.</p>
 FederatedProject_Label=Federated
 FederatedProject_Description=<p><b>Federated</b></p>     <p>A federated "Hello World" program.</p>
+ParallelProject_Label=Parallel
+ParallelProject_Description=<p><b>Parallel</b></p>     <p>A simple fork-join pattern that exploits parallelism.</p>
