Added pipeline example

--- a/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
+++ b/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
@@ -12,3 +12,5 @@ FederatedProject_Label=Federated
 FederatedProject_Description=<p><b>Federated</b></p>     <p>A federated "Hello World" program.</p>
 ParallelProject_Label=Parallel
 ParallelProject_Description=<p><b>Parallel</b></p>     <p>A simple fork-join pattern that exploits parallelism.</p>
+PipelineProject_Label=Pipeline
+PipelineProject_Description=<p><b>Pipeline</b></p>     <p>Basic pipeline pattern where a periodic source feeds a chain of reactors that can all execute in parallel at each logical time step.</p>
