Address missing description issue.

--- a/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
+++ b/org.lflang.ui/src/org/lflang/ui/wizard/messages.properties
@@ -1,3 +1,5 @@
+DefaultProject_Label=Default
+DefaultProject_Description=<p><b>Default</b></p><p>Project with an empty main reactor.</p>
 HelloWorldProject_Label=Hello World
 HelloWorldProject_Description=<p><b>Hello World</b></p> <p>Print "Hello world!" in a target language of choice.</p>
 InteractiveProject_Label=Interactive
